[package]
name = "creativious_game_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
creativious_engine_core = { path = "crates/creativious_engine_core", version = "0.1.0"}
vulkanalia = "0.17.0"